tests/webpack-test/cases/errors/harmony-import-missing2/module2.js
export * from "./a?2";
export { a } from "./missing2";
